# testCorporation

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: settings.py
e_net/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
e_net/migrations/: 0001_initial.py
salesman/: apps.py
users/: admin.py  models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
